<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/ep5_4"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/go_to_web"
        android:layout_marginTop="6dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/ep5_5"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/ep5_rg2"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:textColor="@android:color/black"
            android:text="@string/ep5_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>