<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/ep1_5"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:id="@+id/ep1_rg2"
        android:layout_marginTop="12dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_marginRight="6dp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/ep1_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb2"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/ep1_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>