<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view"
        android:textColor="@android:color/black"
        android:text="@string/ep6_7"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/photo_content"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <RadioGroup
        android:id="@+id/ep6_rg2"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:textColor="@android:color/black"
            android:text="@string/ep6_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb2"
            android:textColor="@android:color/black"
            android:text="@string/ep6_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>