<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/ep6_17"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/go_to_web_playlist"
        android:layout_marginTop="6dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="Get Loose Playlist"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="12dp"
        android:textColor="@android:color/black"
        android:text="@string/ep6_18"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ep6_suggestion_music"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:hint="@string/ep2_13"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapWords"
        android:background="@drawable/bg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>