<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/special"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_gravity="start"
        android:id="@+id/ep1_rg3"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_marginRight="6dp"
            android:textColor="@android:color/black"
            android:text="@string/ep1_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_marginRight="6dp"
            android:textColor="@android:color/black"
            android:text="@string/ep1_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_marginRight="6dp"
            android:textColor="@android:color/black"
            android:text="@string/ep1_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>