<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/ep3_12"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:scaleType="centerCrop"
        android:layout_margin="6dp"
        android:id="@+id/frame"
        android:layout_width="280dp"
        android:layout_height="280dp"/>

    <RadioGroup
        android:id="@+id/ep3_rg2"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:textColor="@android:color/black"
            android:text="@string/ep3_13"
            android:layout_width="0dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb2"
            android:textColor="@android:color/black"
            android:text="@string/ep3_14"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>