<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_width="320dp"
              android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/ep2_4"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/photo_content"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/camera"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="38dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/ep2_5"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/ep2_rg2"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:textColor="@android:color/black"
            android:layout_weight="3"
            android:text="@string/ep2_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>