<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ep_one_s"
    tools:context=".qualitycode.eps.EP1Activity">

    <!-- Top nav bar -->
    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/titlebar"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:textColor="#000000"
            android:text="Back"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Loose"
            android:id="@+id/title"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="#000000"
            android:layout_centerInParent="true" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="Share"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <!-- Opacity frame -->
    <FrameLayout
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/opacity_layer"
        android:background="#64FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Finale view -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/activity_ep1_finale"
        android:padding="14dp"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/activity_ep1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/ep1_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/ep1_continue"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/round"
            android:layout_marginTop="18dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ep1_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Next and back -->
    <RelativeLayout
        android:id="@+id/next_back"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/back"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/ep_back"
            android:textColor="@color/back_next_text_color"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/next"
            android:textSize="18sp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/ep_next"
            android:textColor="@color/back_next_text_color"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>